--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -56,7 +56,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">商铺分类</div>
                                 <div class="item-input">
-                                    <select id="shop-categroy">
+                                    <select id="shop-category">
 
                                     </select>
                                 </div>
@@ -115,19 +115,30 @@
                             <div class="item-inner">
                                 <div class="item-title label">店铺简介</div>
                                 <div class="item-input">
-                                    <textarea id=""shop-desc placeholder="店铺简介"></textarea>
+                                    <textarea id="shop-desc" placeholder="店铺简介"></textarea>
                                 </div>
                             </div>
                         </div>
                     </li>
                     <!--验证码-->
-
+                    <li class="align-top">
+                        <div class="item-content">
+                            <div class="item-inner">
+                                <div class="item-title label">验证码</div>
+                                <input id="j_captcha" placeholder="验证码"></input>
+                                <div class="item-input">
+                                    <img id="captcha_img" alt="点击更换" title="点击更换"
+                                         onclick="changeVerifyCode(this)" src="../Kaptcha"></img>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div class="content-block">
                 <div class="row">
                     <div class="col-50"><a href="#" class="button button-big button-fill button-danger">返回</a></div>
-                    <div class="col-50" id="submit"><a href="#" class="button button-big button-fill button-success">提交</a></div>
+                    <div class="col-50" ><a id="submit" href="/o2o/shopadmin/registerShop" class="button button-big button-fill button-success">提交</a></div>
                 </div>
             </div>
         </div>
@@ -138,5 +149,6 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='../resources/js/shop/shopoperation.js' charset='utf-8'></script>
+<script type='text/javascript' src='../resources/js/common/common.js' charset='utf-8'></script>
 </body>
 </html>
