店铺更新service层测试

--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -138,7 +138,7 @@
             <div class="content-block">
                 <div class="row">
                     <div class="col-50"><a href="#" class="button button-big button-fill button-danger">返回</a></div>
-                    <div class="col-50" ><a id="submit" href="/o2o/shopadmin/registerShop" class="button button-big button-fill button-success">提交</a></div>
+                    <div class="col-50" ><a id="submit" href="#" class="button button-big button-fill button-success">提交</a></div>
                 </div>
             </div>
         </div>
